fixed bug in the email verification api
